--- a/style.css
+++ b/style.css
@@ -6,50 +6,57 @@
   left: 50%;
   transform: translate(-50%, -50%);
    -webkit-perspective: 200px; /* Safari 4-8  */
-	perspective: 200px;
-	perspective-origin: center;
+    perspective: 200px;
 }
 .flip_card {
-  position: relative;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
-  transform-style: preserve-3d;
- 
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    transform-style: preserve-3d;
+    transform-origin: 50% 50%;
 }
 .front_card {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
-  /* backface-visibility: hidden; */
-  overflow: hidden;
-  background: url('bit_front.png');
-      background-size: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+   backface-visibility: hidden;
+    overflow: hidden;
+    background: url('coin_1.png');
+    background-size: cover;
+    transform: translateZ(-1px);
 }
 .back_card {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
-  /* backface-visibility: hidden; */
-  overflow: hidden;
- background: url('bit_front.png');
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    backface-visibility: hidden;
+    overflow: hidden;
+    background: url(coin_2.png);
     background-size: cover;
+    transform: rotateY(180deg) translateZ(2px);
 }
 
-.flip_card{
-	-webkit-animation: preloader 2s infinite ease-in-out;
+.flip_card {
+    -webkit-animation: preloader 2s infinite ease-in-out;
     -moz-animation: preloader 2s infinite ease-in-out;
     -ms-animation: preloader 2s infinite ease-in-out;
     -o-animation: preloader 2s infinite ease-in-out;
-    animation: preloader 2s infinite ease-in-out;
+    animation: preloader 2s infinite ease-in-out alternate;
+    /* -webkit-animation-play-state: paused; */
+    /* animation-play-state: paused; */
+}
+.flip_card:hover{
+	 -webkit-animation-play-state: paused;  
+    animation-play-state: paused;
 }
 @-webkit-keyframes preloader {
     to { -webkit-transform: rotateY(360deg); }
