--- a/style.css
+++ b/style.css
@@ -76,5 +76,6 @@
 }
 
 @keyframes preloader {
+    0% { transform: scale(0.6) rotateY(0deg); }
     100% { transform: scale(1.3) rotateY(360deg); }
 }
