--- a/css/demo.css
+++ b/css/demo.css
@@ -1,164 +1,147 @@
-@import url(http://fonts.googleapis.com/css?family=PT+Sans+Narrow|Volkhov:400italic,700);
-
-*,
-*:after,
-*:before {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	padding: 0;
-	margin: 0;
+@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
+@font-face {
+	font-weight: normal;
+	font-style: normal;
+	font-family: 'codropsicons';
+	src:url('../fonts/codropsicons/codropsicons.eot');
+	src:url('../fonts/codropsicons/codropsicons.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/codropsicons/codropsicons.woff') format('woff'),
+		url('../fonts/codropsicons/codropsicons.ttf') format('truetype'),
+		url('../fonts/codropsicons/codropsicons.svg#codropsicons') format('svg');
 }
 
-/* Clearfix hack by Nicolas Gallagher: http://nicolasgallagher.com/micro-clearfix-hack/ */
-.clearfix:after {
-	content: "";
-	display: table;
-	clear: both;
-}
+*, *:after, *:before { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
+.clearfix:before, .clearfix:after { content: ''; display: table; }
+.clearfix:after { clear: both; }
 
-/* General Demo Style */
 body {
-	background: #e4ebe9 url(../images/fancy_deboss.png) repeat top left;
-	color: #444;
-	font-family: "PT Sans Narrow", Arial, sans-serif;
-	font-size: 13px;
-	font-weight: 400;
-    -webkit-font-smoothing: antialiased;
-    overflow-x: hidden;
-    min-width: 320px;
+	background: #fff;
+	color: #4b5f5a;
+	font-size: 100%;
+	line-height: 1.25;
+	font-family: 'Lato', Arial, sans-serif;
 }
 
 a {
-	color: #000;
+	color: #9baaa7;
 	text-decoration: none;
+	outline: none;
 }
 
-h1, h2, h5 {
-	margin: 20px 20px 30px 20px;
-	font-size: 56px;
-	color: #fff;
-	font-family: "Volkhov", serif;
-	text-align: center;
-	font-weight: 700;
-	text-shadow: 1px 1px 3px #e0d1bc;
+a:hover, a:focus {
+	color: #e88565;
 }
 
-h1 span, h5 {
-	font-size: 18px;
-	display: block;
-	font-style: italic;
-	color: #997f5a;
-	font-weight: 400;
-	text-shadow: 0px 1px 1px #fff;
+code {
+	opacity: 0.7;
+	white-space: nowrap;
+	padding: 0 7px;
+	background: rgba(0,0,0,0.08);
 }
 
-.wrapper {
-	position: relative;
-	max-width: 840px;
-	width: 100%;
-	padding: 0 50px;
+.codrops-header {
 	margin: 0 auto;
+	padding: 2em 2em 0;
+	text-align: center;
 }
 
-/* Header Style */
+.codrops-header h1 {
+	margin: 0;
+	font-weight: 300;
+	font-size: 2.5em;
+	padding-top: 0.2em;
+}
+
+.codrops-header h1 span {
+	display: block;
+	padding: 0 0 0.6em 0.1em;
+	font-size: 0.6em;
+	opacity: 0.7;
+}
+
+/* To Navigation Style */
 .codrops-top {
-	line-height: 24px;
-	font-size: 11px;
-	background: #fff;
-	background: rgba(255, 255, 255, 0.8);
+	width: 100%;
 	text-transform: uppercase;
-	z-index: 9999;
-	position: relative;
-	font-family: Cambria, Georgia, serif;
-	box-shadow: 1px 0px 2px rgba(0,0,0,0.2);
+	font-weight: 700;
+	font-size: 0.69em;
+	line-height: 2.2;
+	text-align: center;
 }
 
 .codrops-top a {
-	padding: 0px 10px;
+	display: block;
+	padding: 0 1em;
+	text-decoration: none;
 	letter-spacing: 1px;
-	color: #333;
-	display: inline-block;
 }
 
-.codrops-top a:hover {
-	background: rgba(255,255,255,0.6);
+.codrops-icon:before {
+	margin: 0 4px;
+	text-transform: none;
+	font-weight: normal;
+	font-style: normal;
+	font-variant: normal;
+	font-family: 'codropsicons';
+	line-height: 1;
+	speak: none;
+	-webkit-font-smoothing: antialiased;
 }
 
-.codrops-top span.right {
-	float: right;
+.codrops-icon-drop:before {
+	content: "\e001";
 }
 
-.codrops-top span.right a {
-	float: left;
-	display: block;
+.codrops-icon-prev:before {
+	content: "\e004";
 }
 
-/* More examples buttons */
-
-.more {
-	position: relative;
-	clear: both;
-	padding: 20px;
-}
-
-.more:before {
-	content: "";
-	position: absolute;
-	background-color: #ddd1b6;
-	box-shadow: 0 1px 0 rgba(255,255,255,0.8);
-	height: 1px;
-	width: 440px;
-	left: 50%;
-	margin-left: -220px;
-	top: -10px;
-}
-
-.more ul {
-	display: block;
-	height: 32px;
+/* Related demos */
+.related {
+	padding: 6em 2em;
 	text-align: center;
 }
 
-.more ul li {
+.related p {
+	font-size: 1.5em;
+}
+
+.related > a {
+	border: 3px solid #8d9a97;
 	display: inline-block;
-	line-height: 24px;
-}
-
-.more ul li.selected a,
-.more ul li.selected a:hover {
-	background: #ae997a;
-	color: #fff;
-	text-shadow: none;
-}
-
-.more ul li a {
-	text-shadow: 1px 1px 1px #fff;
-	color: #555;
-	background: #fbf9f5;
-	padding: 2px 5px;
-	margin: 0 2px;
-	line-height: 18px;
-	display: inline-block;
-	box-shadow: 1px 1px 2px rgba(0,0,0,0.3);
-}
-
-.more ul li a:hover {
-	background: #8c795d;
-	color: #fff;
-	text-shadow: none;
-}
-
-p.info {
-	font-family: "Volkhov", serif;
-	font-style: italic;
-	color: #997f5a;
-	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.9);
-	padding: 20px;
-	display: block;
-	clear: both;
 	text-align: center;
-	width: 100%;
-	max-wdith: 440px;
-	margin: 0 auto;
+	margin: 20px 10px;
+	padding: 25px;
+	color: #8d9a97;
+	-webkit-transition: color 0.3s, border-color 0.3s;
+	transition: color 0.3s, border-color 0.3s;
+}
+
+.related a:hover {
+	color: #4b5f5a;
+	border-color: #4b5f5a;
+}
+
+.related a img {
+	max-width: 100%;
+	opacity: 0.8;
+	-webkit-transition: opacity 0.3s;
+	transition: opacity 0.3s;
+}
+
+.related a:hover img,
+.related a:active img {
+	opacity: 1;
+}
+
+.related a h3 {
+	margin: 0;
+	padding: 0.5em 0 0.3em;
+	max-width: 300px;
+	text-align: left;
+}
+
+#cdawrap {
+	top: 550px !important;
+	background: #f0f0f0 !important;
 }
